[project]
name = "cert-helper"
version = "0.1.0"
description = "A CLI utility to easily create SSL keys, CSR's and (self-signed) certificates."
authors = [
    {name = "Alwyn Kik", email = "alwyn@kik.pw"},
]
dependencies = [
    "cryptography>=41.0.4",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black[d]>=23.10.1",
    "flake8>=5.0.4",
    "flake8-bugbear>=23.3.12",
    "pre-commit>=3.5.0",
    "pylint>=3.0.2",
]
